@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Encode-JP-Emoji
-version:            0.04
+version:            0.05
 abstract:           ~
 author:  []
 license:            apache
@@ -10,7 +10,7 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Encode:         0
+    Encode:         2.12
     Test::Harness:  3.04
     Test::More:     0
 no_index:
